[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "trellis"

version = "0.1.0"

readme = "README.md"
requires-python = ">=3.10, <=3.12"


dependencies = [
    "matplotlib",
    "scipy",
    "torch==2.4.0",
    "torchvision>=0.19.0",
    "albumentations",
    "pyrr",
    "simplejson",
    "tqdm",
    "opencv-python",
    "numpy",
    "scikit-learn",
    "setuptools>=49.6.0",
    "frozendict",
    "requests",
    "httpx",
    "opencv-python", # duplicated, remove one
    "simplejson", # duplicated, remove one
    "gradio==4.44.1",
    "gradio_litmodel3d==0.0.1",
    "toml",
    "pillow",
    "imageio",
    "imageio-ffmpeg",
    "easydict",
    "opencv-python-headless",
    "ninja",
    "rembg",
    "onnxruntime",
    "trimesh",
    "xatlas",
    "pyvista",
    "pymeshfix",
    "igraph",
    "transformers",
    "git+https://github.com/EasternJournalist/utils3d.git@9a4eb15e4021b67b12c460c7057d642626897ec8",
    "xformers",
    "flash_attn"
]



 

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
nvdiffrast = { git = "https://github.com/NVlabs/nvdiffrast.git" }
diff-gaussian-rasterization = { git = "https://github.com/autonomousvision/mip-splatting.git", subdirectory = "submodules/diff-gaussian-rasterization/" }
vox2seq = { git = "https://github.com/neor164/TRELLIS.git", subdirectory = "extensions/vox2seq" }

diffoctreerast = { git =  "https://github.com/JeffreyXiang/diffoctreerast.git" }